@@ -86,7 +86,9 @@
 
 #ifdef HAVE_SYS_VFS_H
 # include <sys/vfs.h>
-# include <sys/statvfs.h>
+# ifdef HAVE_SYS_STATVFS_H
+#  include <sys/statvfs.h>
+# endif
 #endif
 
 #ifdef HAVE_SYS_STATFS_H
